# eliza-inference

./: .env.example  .gitignore  README.md  pyproject.toml
clients/audio/: pipeline_test.py  stt_test.py  tts_test.py  vocode_bridge_test.py
clients/continue/: config.example.json
clients/openai/: long_context_test.py  smoke_test.py  stream_inspect.py  voice_test.py
configs/: eliza-stack.toml
configs/profiles/: eliza-medium-gemma4-26b-a4b-llamacpp-256k-experimental.env  eliza-medium-qwen-llamacpp-32k.env  eliza-medium-qwen-q8-llamacpp-32k.env  eliza-medium-qwen-vllm-128k-experimental.env  eliza-medium-qwen-vllm-200k-experimental.env  eliza-medium-qwen-vllm-smoke-8k.env  eliza-medium-qwen36-35b-a3b-llamacpp-200k-experimental.env  eliza-small-gemma4-12b-quality.env  eliza-small-gemma4-e4b-quality.env  qwen-llamacpp-32k.env  (+20 more)
docs/: benchmark-methodology.md  dgx-spark-setup.md  eliza-medium.md  eliza-small.md  eliza-stack.md  networking.md  qwen-coder.md  stt.md  troubleshooting.md  tts.md  vocode-bridge.md  vocode-pipeline.md  voice-stack.md
eliza-cli/: main.py
scripts/: benchmark-context  benchmark-latency  benchmark-memory  benchmark-stream  cleanup-vllm  doctor  download-models  install  install-llamacpp  install-stt  install-tts  install-vllm  install-vocode  logs  restart  run-benchmark  setup  smoke-test  smoke-test-stack  start  start-stack  status  status-stack  stop  stop-stack
systemd/: eliza-medium.service  eliza-qwen-coder.service  eliza-small.service  eliza-stt.service  eliza-tts.service  eliza-vocode-bridge.service  eliza-voice-llm.service
(+66 files in other folders)
