[project]
name = "eliza-inference"
version = "0.1.0"
description = "DGX Spark local inference stack for Qwen coding and Gemma voice endpoints"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "faster-whisper>=1.1.1",
  "huggingface-hub>=0.32.0",
  "openai>=1.82.0",
  "python-multipart>=0.0.20",
  "uvicorn[standard]>=0.34.0",
]

[tool.uv]
package = false
